# jsstitcher

./: README.MD
src/: README.md  setup.cfg
src/jsstitcher/: __main__.py
src/jsstitcher/jsstitcher/jsstitcher/: file.py  file_content_provider.py  js_file_stitcher.py  js_stitcher.py  main.py
src/jsstitcher/jsstitcher/main/: main.py
src/jsstitcher/test/: data_content_provider_mock.py  test_file_creation.py  test_file_parsing.py  test_integration.py  test_stitching.py
