[metadata]
# package name used for uninstalling
name = jsstitcher

version = 1.0.0
author = DarkTrick
description = A small example package
long_description = file: long_description.MD
long_description_content_type = text/markdown
url = https://github.com/DarkTrick/jsstitcher
project_urls =
    Bug Tracker = https://github.com/DarkTrick/jsstitcher/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
# automatically gather all modules in `jsstitcher`
package_dir =
    = jsstitcher
packages = find:
python_requires = >=3.6

# set root directory
[options.packages.find]
where = jsstitcher

[options.entry_points]
console_scripts =
    jsstitcher = jsstitcher.main.main:generic_main

#